# AdaAttention

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  pyproject.toml  setup.py  uv.lock.toml
cpp/: CMakeLists.txt
cpp/src/: fused_attention.cpp  fused_attention_kernel.cu
examples/: bench.py
python/cuda_attn/: __init__.py  _ext.py  fallback.py  ops.py
tests/: test_attention.py
tools/: build_extension.py
