[build-system]
requires = ["setuptools>=61.0", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "cuda-attn"
version = "0.1.0"
description = "PyTorch C++/CUDA fused attention kernels (production-grade scaffold)"
authors = [{ name = "Ishaan" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ninja>=1.13.0",
    "pybind11>=3.0.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.0"]

[tool.uv]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["cuda_attn"]

